<resources>
    <string name="app_name">Photo Prints</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitle">Phone Photo Prints</string>
    <string name="hint">Number of Prints</string>
    <string name="rad4by6">4 x 6 (19 cents)</string>
    <string name="rad5by7">5 x 7 (49 cents)</string>
    <string name="rad8by10">8 x 10 (79 cents)</string>
    <string name="btnOrder">ORDER PRINTS</string>
</resources>
